--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
     "react-materialize": "^2.4.5",
     "react-scripts": "1.1.5"
   },
+
+  "proxy": "http://localhost:3001",
+
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
